--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -1,11 +1,71 @@
 <div class="container">
-  <h1>Data Binding</h1>
-  <h2>String Interpolation</h2>
-  <p>App name: {{appName}}</p>
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <a class="nav-item nav-link active" data-toggle="tab" href="#basic-databinding" role="tab"
+        aria-controls="basic-databinding" aria-selected="true">Basic Data Binding</a>
+      <a class="nav-item nav-link" data-toggle="tab" href="#cpb-tab" role="tab" aria-controls="cpb-tab"
+        aria-selected="false">Custom Prop Binding</a>
+      <a class="nav-item nav-link" data-toggle="tab" href="#ceb-tab" role="tab" aria-controls="ceb-tab"
+        aria-selected="false">Child to Parent Comp Communication</a>
+      <a class="nav-item nav-link" data-toggle="tab" href="#directives-tab" role="tab" aria-controls="directives-tab"
+        aria-selected="false">Directives</a>
+    </div>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
 
-  <hr>
-  <h2>Property Binding</h2>
-  <p [title]="companyName">Mouseover to see this</p>
-  <input type="text" [value]="companyName">
+    <div class="tab-pane fade show active" id="basic-databinding" role="tabpanel"
+      aria-labelledby="basic-databinding-tab">
+      <h2>Basic Data Binding</h2>
+      <h1>Data Binding</h1>
+      <h2>String Interpolation</h2>
+      <p class="redText">App name: {{appName}}</p>
+      <input type="text" value="{{appName}}">
 
+      <hr>
+      <h2>Property Binding</h2>
+      <p [title]="companyName">Mouseover to see this</p>
+      <input type="text" [value]="companyName">
+
+      <!-- class binding -->
+      <div [ngClass]="{ redText: !isLoggedIn, greenText: isLoggedIn }">
+        Testing
+      </div>
+
+      <!-- todo: ngStyle --- style binding -->
+
+      <hr>
+      <h2>Event Binding</h2>
+      <button onclick="clickMeHandler()">Click me -- will not work --check console</button>
+      <br>
+      <button (click)="clickMeHandler($event)">Click me</button>
+
+      <hr>
+      <h2>Two Way Binding</h2>
+      <p>Course Name: {{courseName}}</p> <!-- string interpolation -->
+      <input type="text" value="{{courseName}}"> <!-- string interpolation --> <br>
+      <input type="text" [value]="courseName"> <!-- property binding --> <br>
+      <input type="text" [(ngModel)]="courseName">
+
+    </div>
+
+    <div class="tab-pane fade" id="cpb-tab" role="tabpanel" aria-labelledby="cpb-tab-tab">
+      <h2>Parent to Child Comp Communication -- Custom Property Binding</h2>
+
+    </div>
+
+    <div class="tab-pane fade" id="ceb-tab" role="tabpanel" aria-labelledby="ceb-tab-tab">
+      <h2>Child to Parent Comp Communication</h2>
+      <h3>Custom Event Binding</h3>
+
+
+    </div>
+
+    <div class="tab-pane fade" id="directives-tab" role="tabpanel" aria-labelledby="directives-tab">
+      <h2>Directives</h2>
+
+
+    </div>
+
+
+  </div>
 </div>
