--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -50,13 +50,18 @@
 
     <div class="tab-pane fade" id="cpb-tab" role="tabpanel" aria-labelledby="cpb-tab-tab">
       <h2>Parent to Child Comp Communication -- Custom Property Binding</h2>
-
+      <app-cpb></app-cpb>
+      <app-cpb [age]="30"></app-cpb>
+      <app-cpb [age]="50"></app-cpb>
+      <app-cpb [age]="60"></app-cpb>
+      
     </div>
 
     <div class="tab-pane fade" id="ceb-tab" role="tabpanel" aria-labelledby="ceb-tab-tab">
       <h2>Child to Parent Comp Communication</h2>
       <h3>Custom Event Binding</h3>
-
+      <!-- step 3: work with event handler -->
+      <app-ceb (profileLoaded)="profileLoadedHandler($event)"></app-ceb>
 
     </div>
 
