--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-header></app-header>
 
 <div style="margin-top: 80px;">
-  <app-concepts></app-concepts>
+  <router-outlet></router-outlet>
 </div>
 
 <app-footer></app-footer>
