--- a/src/app/contacts/components/add-contact/add-contact.component.html
+++ b/src/app/contacts/components/add-contact/add-contact.component.html
@@ -6,14 +6,15 @@
     </div>
     
     <!-- Step 3: patchup form tag with the FormGroup in ts -->
-    <form class="col-md-6 offset-md-3"> <!-- step 7: work on submission flow -- ref ts for step 8-->
+    <form class="col-md-6 offset-md-3" [formGroup]="contactForm" 
+    (ngSubmit)="addContactHandler()"> <!-- step 5: work on submission flow -- ref ts for step 6-->
       <div class="form-group row">
         <label for="staticName" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
           <!-- step 4: patchup form fields with the FormControl in ts -->
           <!-- goto ts for step 5-->
           <input type="text" class="form-control" 
-          placeholder="Enter Name" />  <!-- step6: displaying validation related msg -->
+          placeholder="Enter Name" formControlName="name"/>  
           <div class="invalid-feedback">
             <div>Name is required</div>
           </div>
@@ -23,7 +24,7 @@
         <label for="staticPhone" class="col-sm-2 col-form-label">Phone</label>
         <div class="col-sm-10">
           <input type="text" class="form-control"
-          placeholder="Enter Phone"/>
+          placeholder="Enter Phone" formControlName="phone"/>
           <div class="invalid-feedback">
             <div>Phone is required</div>
           </div>
@@ -32,8 +33,8 @@
       <div class="form-group row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" 
-          placeholder="Enter Email"/>
+          <input type="email" class="form-control" 
+          placeholder="Enter Email" formControlName="email"/>
           <div 
           class="invalid-feedback">
             <div>Email is required</div>
@@ -42,7 +43,7 @@
         </div>
       </div>
 
-      <div class="alert alert-success">
+      <div class="alert alert-success" *ngIf="isSaved">
         Saved Successfully
       </div>
 
