--- a/src/app/contacts/components/contact-details/contact-details.component.html
+++ b/src/app/contacts/components/contact-details/contact-details.component.html
@@ -2,13 +2,14 @@
   <div class="row">
     <a class="btn btn-dark" routerLink="/contacts">Go back</a>
     <div class="card col-md-12">
-      <div class="card-body">
-        <h5 class="card-title">John</h5>
+      <div class="card-body" *ngIf="contactData">
+        <h5 class="card-title">{{contactData.name}}</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
           card's content.</p>
-        <p>Phone: 23423423</p>
-        <p>Email: a@b.com</p>
-        <button type="button" class="btn btn-primary" data-toggle='modal' data-target='#editContactModal'>Edit</button>
+        <p>Phone: {{contactData.phone}}</p>
+        <p>Email: {{contactData.email}}</p>
+        <button type="button" class="btn btn-primary" 
+        data-toggle='modal' data-target='#editContactModal'>Edit</button>
         <button type="button" class="btn btn-danger">Delete</button>
 
         <!-- Modal -->
@@ -23,23 +24,26 @@
                 </button>
               </div>
               <div class="modal-body">
-                <form>
+                <form #f="ngForm" (ngSubmit)="updateHandler(f)">
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" placeholder="Enter name" name="contactName" required>
+                      <input type="text" class="form-control" 
+                      placeholder="Enter name" name="name" ngModel required>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Phone</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" placeholder="Enter Phone" name="phone" required>
+                      <input type="text" class="form-control" 
+                      placeholder="Enter Phone" ngModel name="phone" required>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" placeholder="Enter Email" name="email" required>
+                      <input type="email" class="form-control" 
+                      placeholder="Enter Email" ngModel name="email" required>
                     </div>
                   </div>
 
