--- a/src/app/contacts/components/contacts.component.html
+++ b/src/app/contacts/components/contacts.component.html
@@ -10,11 +10,11 @@
 
   <div class="row">
 
-    <div class="card col-sm-3">
+    <div class="card col-sm-3" *ngFor="let contact of contactList">
       <div class="card-body">
-        <h5 class="card-title">John</h5>
-        <p class="card-text">234252345</p>
-        <a routerLink="/contacts/1" class="link">View Details</a>
+        <h5 class="card-title">{{contact.name}}</h5>
+        <p class="card-text">{{contact.email}}</p>
+        <a routerLink="/contacts/{{contact.id}}" class="link">View Details</a>
       </div>
     </div>
 
