--- a/src/app/contacts/components/add-contact/add-contact.component.html
+++ b/src/app/contacts/components/add-contact/add-contact.component.html
@@ -12,8 +12,9 @@
         <label for="staticName" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
           <!-- step 4: patchup form fields with the FormControl in ts -->
-          <!-- goto ts for step 5-->
           <input type="text" class="form-control" 
+          [ngClass]="{ 'is-invalid': contactForm.get('name').touched 
+            && contactForm.get('name').invalid }"
           placeholder="Enter Name" formControlName="name"/>  
           <div class="invalid-feedback">
             <div>Name is required</div>
@@ -23,8 +24,11 @@
       <div class="form-group row">
         <label for="staticPhone" class="col-sm-2 col-form-label">Phone</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control"
-          placeholder="Enter Phone" formControlName="phone"/>
+          <input type="text" class="form-control" 
+          [ngClass]="{ 'is-invalid': contactForm.get('phone').touched 
+          && contactForm.get('phone').invalid }"
+          placeholder="Enter Phone" formControlName="phone"
+          />
           <div class="invalid-feedback">
             <div>Phone is required</div>
           </div>
@@ -34,11 +38,13 @@
         <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
           <input type="email" class="form-control" 
+          [ngClass]="{ 'is-invalid': contactForm.get('email').touched 
+          && contactForm.get('email').invalid }"
           placeholder="Enter Email" formControlName="email"/>
-          <div 
-          class="invalid-feedback">
-            <div>Email is required</div>
-            <div>Email seems to be not valid</div>
+          <div class="invalid-feedback" 
+          *ngIf="contactForm.get('email').touched && contactForm.get('email').invalid" >
+            <div *ngIf="contactForm.get('email').errors?.required">Email is required</div>
+            <div *ngIf="contactForm.get('email').errors?.email">Email seems to be not valid</div>
           </div>
         </div>
       </div>
@@ -49,7 +55,8 @@
 
       <div class="form-group row">
         <div class="col-sm-10 offset-sm-2">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary" 
+          [disabled]="contactForm.invalid">Submit</button>
         </div>
       </div>
     </form>
