--- a/src/app/contacts/components/contact-details/contact-details.component.html
+++ b/src/app/contacts/components/contact-details/contact-details.component.html
@@ -9,7 +9,7 @@
         <p>Phone: {{contactData.phone}}</p>
         <p>Email: {{contactData.email}}</p>
         <button type="button" class="btn btn-primary" 
-        data-toggle='modal' data-target='#editContactModal'>Edit</button>
+        data-toggle='modal' data-target='#editContactModal' (click)="editModalOpen()">Edit</button>
         <button type="button" class="btn btn-danger">Delete</button>
 
         <!-- Modal -->
@@ -23,31 +23,31 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-body">
-                <form #f="ngForm" (ngSubmit)="updateHandler(f)">
+              <div class="modal-body" *ngIf="duplicateContactData">
+                <form ngNativeValidate #f="ngForm" (ngSubmit)="updateHandler(f)">
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" 
-                      placeholder="Enter name" name="name" ngModel required>
+                      <input type="text" class="form-control" [(ngModel)]="duplicateContactData.name"
+                      placeholder="Enter name" name="name" required>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Phone</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" 
-                      placeholder="Enter Phone" ngModel name="phone" required>
+                      <input type="text" class="form-control"  [(ngModel)]="duplicateContactData.phone"
+                      placeholder="Enter Phone" name="phone" required>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" 
-                      placeholder="Enter Email" ngModel name="email" required>
+                      <input type="email" class="form-control" [(ngModel)]="duplicateContactData.email"
+                      placeholder="Enter Email" name="email" required>
                     </div>
                   </div>
 
-                  <div class="alert alert-success">
+                  <div class="alert alert-success" *ngIf="isUpdated">
                     Updated successfully!
                   </div>
 
